--- a/src/components/_forms.scss
+++ b/src/components/_forms.scss
@@ -7,6 +7,7 @@ textarea {
   border-bottom-right-radius: 225px 15px;
   border-top-left-radius: 255px 15px;
   border-top-right-radius: 15px 225px;
+  height: 51px;
   color: $primary;
   display: block;
   font-size: 1rem;
